--- a/module-03/css/styles.css
+++ b/module-03/css/styles.css
@@ -16,7 +16,10 @@ nav {
     width: 100%;
     margin-left: -70px;*/
     padding-top: 5px;
-    bottom: 10px ;
+    padding-bottom: 10px ;
+    margin: 0;
+    padding-left: 0;
+
    }
 .site-navigation li { 
    display: inline-block; /* Отображать как строчный элемент */
@@ -24,8 +27,8 @@ nav {
    margin-right: 25px;
    
    }
-   .link {
-       margin-right: 0;
+   .site-navigation li:last-child {
+      margin-right: 0;
    }
 .site-navigation a {
    display: block;
@@ -50,33 +53,38 @@ div {
 
 .row-list {
     list-style: none; 
+    padding: 0;
+    margin: 0;
+    font-size: 0;
 }
 .row-list-item {
     display: inline-block;
-    width: 40%;
-    margin: 2em; 
-    text-align: justify;  
+    width: 420px;
+    /*margin: 2em; */
+    /*text-align: justify; */ 
     margin-right: 20px;
-    bottom: 0; 
+    /*bottom: 0; */
+    margin-right: 60px;
 }
-.row-list-item:not(:nth-child(2n)) {
+.row-list-item:nth-child(2n) {
     margin-right: 0; 
    }
 .row-list-image {
     list-style: none;
     width: 100%;
-    
+    margin-bottom: 20px;
+}
 .row-list-name {
     font-size: 14px;
     line-height: 17px;
     color: #b4ad9e;
     text-transform: uppercase;
     text-decoration: none;
-    margin-top: 30px; 
+    margin: 0;
+    margin-bottom: 20px;
 }
 .row-list-heading {
-    display: block;
-    font-size: 1.5em;
+    font-size: 30px;
     margin-block-start: 0.83em;
     margin-block-end: 0.83em;
     margin-inline-start: 0px;
@@ -86,8 +94,7 @@ div {
     margin-bottom: 20px;
 }
 .row-list-post {
-    
-    display: block;
+    font-size: 14px;
     margin-block-start: 1em;
     margin-block-end: 1em;
     margin-inline-start: 0px;
@@ -98,14 +105,10 @@ div {
 .row-list-post:not(:nth-last-child(-n+6)) {
     margin-bottom: 0;
 }
-.page-footer button {
+.button {
     font-size: 20px;
-    line-height: 24px;
-    color: #626262;
-    margin: 100px;
-    margin-left: 450px;
-    padding: 10px;
-    margin-top: 30px;
+    margin: auto;
+    
 }
 
 .visually-hidden:not(:focus):not(:active),
@@ -125,6 +128,4 @@ input[type="radio"].visually-hidden {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
-footer {
-    display: block;
-}
+
