--- a/module-03/css/styles.css
+++ b/module-03/css/styles.css
@@ -10,9 +10,9 @@ nav {
 }
 .site-navigation {  
     /*font-size: 14px;
-    list-style: none;
+    list-style: none;*/
     text-align: center;
-    padding: 50px;
+    /*padding: 50px;
     width: 100%;
     margin-left: -70px;*/
     padding-top: 5px;
@@ -56,6 +56,7 @@ div {
     padding: 0;
     margin: 0;
     font-size: 0;
+    margin-bottom: 60px;
 }
 .row-list-item {
     display: inline-block;
@@ -69,6 +70,9 @@ div {
 .row-list-item:nth-child(2n) {
     margin-right: 0; 
    }
+.row-list-item:not(:nth-last-child(-n + 2)){
+    margin-bottom: 60px;
+} 
 .row-list-image {
     list-style: none;
     width: 100%;
@@ -105,10 +109,12 @@ div {
 .row-list-post:not(:nth-last-child(-n+6)) {
     margin-bottom: 0;
 }
-.button {
+button {
+     display: block;
     font-size: 20px;
-    margin: auto;
-    
+    padding: 15px;
+    margin: 60px auto;
+    color: #8a8a8a; 
 }
 
 .visually-hidden:not(:focus):not(:active),
