--- a/module-04/css/styles.css
+++ b/module-04/css/styles.css
@@ -17,6 +17,7 @@ body {
     width: 1140px;
     padding-left: 15px;
     padding-right: 15px;
+    margin: 0 auto;
 }
 .logo {
     float: left;
@@ -77,7 +78,12 @@ font-family: "Roboto", "Arial", serif;
     
 }
 
+
+
 .row-list-price:hover {
+    background-color: #1abc9c;
+}
+.row-list-name:hover {
     background-color: #1abc9c;
 }
 .row-list-rectangle {
@@ -132,7 +138,7 @@ font-family: "Roboto", "Arial", serif;
     line-height: 32px;
     width: 202px;
     height: 40px;
-    background-color: #323232;
+   
     color: #f5f5f5;
     margin: 0;
     padding: 0;
@@ -148,8 +154,7 @@ font-family: "Roboto", "Arial", serif;
     line-height: 32px;
     width: 53px;
     height: 40px;
-   
-    background-color: #8c8c8c;
+    background-color: #ffffff;
     opacity: 0.7;
     margin: 0;
     padding: 0;
@@ -171,10 +176,10 @@ font-family: "Roboto", "Arial", serif;
     margin-right: 10px;
 }
 .page-footer-row:not(:nth-child(3n)){
-    margin-right: 39px;
+    margin-right: 40px;
 }
 .page-footer-row::not(:nth-last-child(-n+3)) {
-    margin-bottom: 83px;
+    margin-bottom: 82px;
 }
 .page-footer-name {
     font-family: "Roboto", "Arial", serif;
@@ -196,6 +201,15 @@ font-family: "Roboto", "Arial", serif;
     margin: 0;
     margin-bottom: 20px;
 }
+.page-footer-heading::after {
+    
+    display: block;
+    width: 164px;
+    height: 3px;
+    background-color: #4ec6ab ;
+    content: '';
+    margin: 20px 0;
+}
 .page-footer-post {
     font-family: "OpenSans", "Arial", sans-serif;
     font-size: 18px;
@@ -205,12 +219,14 @@ font-family: "Roboto", "Arial", serif;
     margin-bottom: 20px;
 }
 .page-footer-link {
+    display: block;
     font-family: "OpenSans", "Arial", sans-serif;
     background-color: #4ec6ab;
     text-decoration: none;
+    text-align: center;
     color: #cfede5;
-    width: 160px;
-    height: 50px;
+    width: 100px;
+    height: 25px;
     font-size: 16px;
     line-height: 26px;
     padding: 15px 25px;   
