--- a/module-04/css/styles.css
+++ b/module-04/css/styles.css
@@ -94,8 +94,11 @@ font-family: "Roboto", "Arial", sans-serif;
     width: 255px;
     float: left; 
     cursor: pointer; 
+    padding-right: 30px;
+    padding-bottom: 5px;
     
 }
+
 
 .row-list-rectangle:hover .row-list-name {
     background-color: #1abc9c;
@@ -107,10 +110,13 @@ font-family: "Roboto", "Arial", sans-serif;
 
 .row-list-rectangle:not(:nth-child(4n)) {
     margin-right: 0;
+   
 }
 
 .row-list-rectangle:not(:nth-last-child(-n+4)) {
     margin-bottom: 32px;
+ 
+   
 }
 
 .page-footer-name::after {
@@ -119,6 +125,7 @@ font-family: "Roboto", "Arial", sans-serif;
     height: 7px;
     background-color: #4ec6ab ;
     content: '';
+    margin: 0 auto;
     margin-top: 20px;
 }
 
@@ -128,7 +135,7 @@ font-family: "Roboto", "Arial", sans-serif;
     height: 7px;
     background-color: #4ec6ab ;
     content: '';
-    /*margin-top: 20px auto;*/
+    margin: 0 auto;
     margin-top: 20px;
 }
 
@@ -227,6 +234,7 @@ font-family: "Roboto", "Arial", sans-serif;
     height: 3px;
     background-color: #4ec6ab ;
     content: '';
+    
     margin-top: 7px;
 }
 
