--- a/module-05/css/styles.css
+++ b/module-05/css/styles.css
@@ -32,7 +32,7 @@ body {
 .container {
     width: 1110px;
     margin: 0 auto;
-    position: relative;
+    
   }
 
   .clearfix::after {
@@ -351,7 +351,7 @@ body {
   width: 50px;
   height: 50px;
   */background-repeat: no-repeat;
-  background-position: center;*/
+  background-position: center;
 }
 
 .overlay_list-clik:hover {
