--- a/module-05/css/styles.css
+++ b/module-05/css/styles.css
@@ -55,7 +55,11 @@ body {
     color: #555252;
     float: left;
   }
-  
+  .logotype::first-letter {
+    color: #1abc9c;
+    font-family: "Roboto", "Arial", sans-serif;
+    }
+
  .navigation_list {
      float: right;
      margin-top: 7px;
@@ -70,16 +74,17 @@ body {
 }
 
  .navigation_list_link {
+  font-family: "Open sans", "Arial", sans-serif;
+  font-weight: 700;
   font-size: 14px;
   display: block;
   color: #0f0101;
   text-transform: uppercase;
   text-decoration: none;
   line-height: 11px;
-  font-weight: 700;
-  font-family: "Open sans", "Arial", sans-serif;
-
+  
  }
+
  .navigation a:hover {
   color: #1abc9c; 
 
@@ -87,6 +92,7 @@ body {
  .navigation_list_item {
      float: left;
  }
+ 
  .navigation_list_item:not(:last-child) {
      margin-right: 30px;
 
@@ -317,6 +323,10 @@ body {
 .overlay_list_item:not(:nth-last-child(-n+1)) {
   margin-bottom: 8px;
 }
+.overlay_list-clik {
+  display: inline-block;
+ 
+}
 .overlay_list-clik_basket {
   width: 164px;
   height: 50px;
@@ -328,13 +338,14 @@ body {
   line-height: 32px;
   letter-spacing: -0.28px;
   text-transform: uppercase;
-
+  float: left;
 
 }
 
 .overlay_list-clik_basket span {
   vertical-align: middle;
   padding-right: 15px;
+  float: right;
 }
 
 .overlay_list-clik {
@@ -373,8 +384,16 @@ body {
   background-color: transparent;
 }
 .overlay_list-clik_basket {
+  font-family: "Open sans", sans-serif ;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 32px;
+  letter-spacing: -0.28px;
+  text-transform: uppercase;
   background-image: url("../img/basket.png");
   background-color: transparent;
+  width: 165px;
+  
 }
 .works {
   padding: 42px 0;
