--- a/module-05/css/styles.css
+++ b/module-05/css/styles.css
@@ -43,15 +43,14 @@ body {
   .header {
       padding-top: 32px;
       padding-bottom: 32px;
-
   }
   
-
   .logotype {
     font-family: "Open-sans", "Arial", sans-serif; 
     font-size: 30px;
     font-weight: 400;
     line-height: 36px;
+    text-transform: uppercase;
     color: #555252;
     float: left;
   }
@@ -184,15 +183,15 @@ body {
   color: #ffffff;
    
 }
-.row {
+.new_collection {
   background-color: #e9f0fd;
   padding-bottom: 100px;
 }
-.row-name {
+.new_collection-name {
   padding-top: 103px;
 }
 
-.row-list {
+.new_collection-list {
   text-decoration: none;
   text-transform: uppercase;
   list-style: none;
@@ -200,7 +199,7 @@ body {
   margin: 0; 
   padding-top: 82px; 
 }
-.row-list-collection {
+.new_collection-list-card {
   /*display: block;*/
   width: 255px;
   float: left; 
@@ -218,17 +217,17 @@ body {
   margin-bottom: 32px;
 
 }
-.row-list-collection:nth-child(4n) {
+.new_collection-list-card:nth-child(4n) {
   margin-right: 0;
   padding-right: 0;
 }
-.row-list-collection .row-list-block {
+.new_collection-list-card .new_collection-list-block {
   background-color: #323232;
 }
-.row-list-collection a {
+.new_collection-list-card a {
   color: #ffffff;
 }
-.row-name {
+.new_collection-name {
     
   font-family: "Roboto", "Arial", sans-serif;
   font-size: 48px;
@@ -242,7 +241,7 @@ body {
   padding-top: 102px;
 }
 
-  .row-name::after {
+  .new_collection-name::after {
     display: block;
     width: 164px;
     height: 7px;
@@ -252,17 +251,17 @@ body {
     margin-top: 36px;
     
 }
-.row-list-image {
+.new_collection-list-image {
   float: right; 
   width: 255px;
   /*height: auto;*/
 }
-.row-list-block {
+.new_collection-list-block {
   float: left;
   width: 100%;
   background-color: #323232;  
 }
-.row-list-name {
+.new_collection-list-name {
   float: left;
   font-family: "Roboto", "Arial", sans-serif;
   font-size: 18px;
@@ -274,13 +273,13 @@ body {
   padding-left: 13px;
   text-align: center;
 }
-.row-list-collection:hover .row-list-block{
+.new_collection-list-card:hover .row-list-block{
   background-color: #1abc9c;
 }
-.row-list-collection a {
+.new_collection-list-card a {
   color: #FFFFFF;
 }
-.row-list-price {
+.new_collection-list-price {
   float: right;
   font-family: "Roboto", "Arial", sans-serif;
   font-size: 18px;
@@ -349,7 +348,6 @@ body {
 .overlay_list-clik_basket span {
   vertical-align: middle;
   padding-right: 15px;
- 
   
 }
 
