--- a/module-05/css/styles.css
+++ b/module-05/css/styles.css
@@ -80,35 +80,24 @@ body {
   color: #0f0101;
   text-transform: uppercase;
   text-decoration: none;
-  line-height: 11px;
-  
+  line-height: 11px; 
  }
 
  .navigation a:hover {
   color: #1abc9c; 
-
  }
+
  .navigation_list_item {
      float: left;
  }
  
  .navigation_list_item:not(:last-child) {
      margin-right: 30px;
-
  }
-  .navigation_list_link {
-    font-family: "Roboto", "Arial", sans-serif; 
-    font-size: 10px;
-    font-weight: 700;
-    line-height: 11px;
-    color: #0f0101;
-  }
-
+  
  .slider {
   position: relative;
   height: auto;
-  
-  
  }
  
  .slider::before {
@@ -135,15 +124,20 @@ body {
   width: 104px;
   height: 104px;
   background-color: #1abc9c;
- 
 }
 
 .slider-ctrl-prev {
   float: left;
+  background-image: url("../img/img7.png");
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .slider-ctrl-next {
   float: right;
+  background-image: url("../img/img6.png");
+  background-repeat: no-repeat;
+  background-position: center;
 }  
 
 .slides {
@@ -151,11 +145,10 @@ body {
   width: 800px ;
   left: 50%;
   top: 50%;
-  
   color: #ffffff;
-  transform: translate(-50%, -50%);
-      
+  transform: translate(-50%, -50%);  
 }
+
 .slides-image {
   width: 100%;
 }
@@ -164,8 +157,7 @@ body {
   display: block;
   width: 100%;
   height: auto;
-  object-fit: cover;
-  
+  object-fit: cover;  
 }
     
 .slides-descr-up { 
@@ -180,13 +172,14 @@ body {
   font-family: "Roboto", "Arial", sans-serif; 
   font-weight: 300; 
   font-size: 24px;
-  color: #ffffff;
-   
+  color: #ffffff;  
 }
+
 .new_collection {
   background-color: #e9f0fd;
   padding-bottom: 100px;
 }
+
 .new_collection-name {
   padding-top: 103px;
 }
@@ -199,21 +192,21 @@ body {
   margin: 0; 
   padding-top: 82px; 
 }
+
 .new_collection-list-card {
   /*display: block;*/
   width: 255px;
   float: left; 
   cursor: pointer; 
- /* padding-right: 0;*/
   margin-right: 30px;
   padding-bottom: 28px;
-  position: relative;
-    
+  position: relative; 
 }
-.row-list-collection:hover .overlay {
+
+.new_collection-list-card:hover .overlay {
   display: block;
 }
-.row-list-collection:not(:nth-last-child(-n+4)) {
+.new_collection-list-card:not(:nth-last-child(-n+4)) {
   margin-bottom: 32px;
 
 }
@@ -221,12 +214,15 @@ body {
   margin-right: 0;
   padding-right: 0;
 }
+
 .new_collection-list-card .new_collection-list-block {
   background-color: #323232;
 }
+
 .new_collection-list-card a {
   color: #ffffff;
 }
+
 .new_collection-name {
     
   font-family: "Roboto", "Arial", sans-serif;
@@ -247,38 +243,39 @@ body {
     height: 7px;
     background-color: #4ec6ab ;
     content: '';
-    margin: 0 auto;
-    margin-top: 36px;
-    
+    margin: 36px auto 0;
 }
+
 .new_collection-list-image {
   float: right; 
   width: 255px;
   /*height: auto;*/
 }
+
 .new_collection-list-block {
-  float: left;
-  width: 100%;
+  display: block;
   background-color: #323232;  
 }
+
 .new_collection-list-name {
   float: left;
   font-family: "Roboto", "Arial", sans-serif;
   font-size: 18px;
   line-height: 40px;
-  /*width: 204px;*/
-  /*height: 40px;*/
   color: #f5f5f5;
   margin: 0;
   padding-left: 13px;
   text-align: center;
 }
-.new_collection-list-card:hover .row-list-block{
+
+.new_collection-list-card:hover .new_collection-list-block{
   background-color: #1abc9c;
 }
+
 .new_collection-list-card a {
   color: #FFFFFF;
 }
+
 .new_collection-list-price {
   float: right;
   font-family: "Roboto", "Arial", sans-serif;
@@ -311,44 +308,37 @@ body {
   top: 50%;
   transform: translate(-50%,-50%);
   padding: 0;
-  list-style: none;
-  cursor: pointer;
-                                                               
+  list-style: none;                                                            
 }
+
 .overlay_list_item {
-  float: left;
-  
+  float: left; 
 }
+
 .overlay_list_item:not(:nth-child(n+3)){
   margin-right: 7px;
 }
+
 .overlay_list_item:not(:nth-last-child(-n+1)) {
   margin-bottom: 8px;
 }
 
-
 .overlay_list-clik_basket {
   background-image: url("../img/basket.png");
   background-color: transparent;
-  /*width: 164px;
-  height: 50px;
-  padding-top: 1px;
-  background-color: #323232;
-  font-family: "Open sans", sans-serif;
+  font-family: "Open sans", sans-serif ;
   font-size: 14px;
   font-weight: 400;
   line-height: 32px;
   letter-spacing: -0.28px;
   text-transform: uppercase;
-  background-position: left;
-  float: left;*/
-  
+  width: 165px;
+  background-position: 10px center;
 }
 
 .overlay_list-clik_basket span {
   vertical-align: middle;
-  padding-right: 15px;
-  
+  padding-left: 30px; 
 }
 
 .overlay_list-clik {
@@ -375,37 +365,27 @@ body {
 .overlay_list-clik_arrow {
   background-image: url("../img/arrow.png");
   background-color: transparent;
-  
 }
+
 .overlay_list-clik_circle {
   background-image: url("../img/circle.png");
   background-color: transparent;
 }
-.overlay_list-clik_basket {
-  font-family: "Open sans", sans-serif ;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 32px;
-  letter-spacing: -0.28px;
-  text-transform: uppercase;
-  /*background-image: url("../img/basket.png");
-  background-color: transparent;*/
-  width: 165px;
-  background-position: left;
-  
-}
+
 .cart {
   line-height: 50px;
-  
 }
+
 .works {
   padding: 42px 0;
   background-color: #323232;
 }
+
 .tabs-list {
   width: max-content;
   margin: 0 auto;
 }
+
 .tabs-list_btn {
   background-color: transparent;
   border: none;
@@ -415,8 +395,8 @@ body {
   line-height: 28px;
   color: #ffffff;
   background-color: transparent;
-
 }
+
 .activ-tab {
   color: #46bfa9;
 }
