--- a/module-06/css/styles.css
+++ b/module-06/css/styles.css
@@ -334,7 +334,7 @@ body {
     
     
 }
-.subscribe-form__input {
+.subscribe-form_input {
     border: 1px solid #cccccc;
     width: 230px;
     height: 40px;
@@ -346,7 +346,7 @@ body {
     line-height: 24px;
     padding-left: 10px;
   }
-.subscribe-form__btn {
+.subscribe-form_btn {
     font-family: "Monserrat", sans-serif;
     font-weight: 700;
     font-size: 14px;
