--- a/module-08/css/styles.css
+++ b/module-08/css/styles.css
@@ -98,14 +98,23 @@ img {
     font-weight: bold;
     line-height: 1.2;
     background-color: transparent;
-    width: 88px;
-    height: 35px;
+    
     border: none;
     cursor: pointer;
+    width: 94px;
+    height: 40px;
+    margin-top: 21px;
     
-    
-    
+  
 }
+.form_btn:hover {
+  border-style: solid;
+  border-width: 2px;
+  border-color: rgb(255, 255, 255);
+  border-radius: 20px;
+}
+
+
 
 
 .dreams_logo-link {
@@ -157,28 +166,52 @@ img {
     margin: 0 auto;
     margin-bottom: 11px;
 }
-.dreams_link-find_your {
+.dreams-link {
   display: flex;
   justify-content: center;
     width: 280px;
     min-height: 40px;
     align-items: center;
     border-radius: 20px;
-    background-color: rgb(255, 78, 80);
     text-align: center;
     margin: 0 auto;
     padding: 15px 0;
-   
-}
-.dreams_link-find_your {
     font-size: 14px;
     font-family: "Montserrat";
-    color: rgb(255, 255, 255);
     font-weight: bold;
     line-height: 1.2;
 }
+.dreams_link-find_your {
+  
+    background-color: rgb(255, 78, 80);
+    color: rgb(255, 255, 255);
+    
+}
+.dreams_link-find_your:hover {
+  background-color: rgb(255, 255, 255);
+  color:  rgb(255, 78, 80);
+  border-style: solid;
+  border-width: 2px;
+  border-color: rgb(255, 78, 80);
+}
+.dreams_link-find {
+  background-color: rgb(255, 255, 255);
+  color:  rgb(255, 78, 80);
+  border-style: solid;
+  border-width: 2px;
+  border-color: rgb(255, 78, 80);
+  
+}
+.dreams_link-find:hover {
+  background-color: rgb(255, 78, 80);
+  color: rgb(255, 255, 255);
+  border-style: solid;
+  border-width: 2px;
+}
+
 .partners {
     padding-top: 72px;
+    padding-bottom: 53px;
 }  
 .partners_heading {
   font-size: 22px;
@@ -267,6 +300,7 @@ img {
    display: flex;
    flex-direction: row-reverse;
    justify-content: space-between;
+   align-items: center;
  }
  .dreams_logo-link-mobile {
   display: none;
@@ -279,7 +313,7 @@ img {
   margin-bottom: 0;
 }
 .form_btn {
-  
+  margin-top: 0;
 }
 .dreams_heading {
    display: block;
@@ -298,6 +332,18 @@ img {
   width: 404px ;
   margin-bottom: 40px;
 }
+.partners_list {
+  width: 500px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  margin: 0 auto;
+}
+.partners_list-item:nth-of-type(2) { order: 3; }
+
+.partners_list-item:nth-of-type(4) { order: 3; }
+
 
 }
 /*версия desktop*/
@@ -317,4 +363,12 @@ img {
     
  
 }  
+.partners_list {
+  width: 940px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 auto;
+  margin-bottom: 40px;
+}
 }
