--- a/module-07/css/styles.css
+++ b/module-07/css/styles.css
@@ -168,9 +168,7 @@ img {
 
 .services-list_item::before {
    display: block;
-   top: 0;
-   left: 50%;
-   transform: translateX(-50%);
+   margin: 0 auto 15px;
    content: "";
    width: 72px;
    height: 72px;
@@ -250,28 +248,28 @@ img {
 }
 
 .contact-form_list {
-
-    width: 100%;
+    width: calc(50% - 15px);
+    
 }
 .contact-form_block {
     display: flex ;
     justify-content: space-between;
-    width: 940px;
     margin-bottom: 30px;
 }
 
 .contact-form_input {
-    width: calc(50%-15px);
+   width: 100%;
+   height: 52px;
+
 }
 .contact-form_input:not(:last-child) {
-    margin-right: 20px;
+    margin-bottom: 20px;
 }
 .contact-form_message {
   
-    padding: 0 30px;
-   /*resize: none;
-    padding-top: 20px;*/
-    width: calc(50%-15px);
+   padding-top: 20px;
+    resize: none;
+    width: calc(50% - 15px);
 }
 .contact-form_input,
 .contact-form_message {
