--- a/module-10/css/styles.css
+++ b/module-10/css/styles.css
@@ -35,19 +35,39 @@ img {
     
 }
 .header {
-    background-image: linear-gradient(90deg, rgb(252,227,138) 0%, rgb(243,129,129) 100%),
-    url("../img/background/bg.jpg");
+    background-image: linear-gradient(90deg, rgba(252,227,138,0.9) 0%, rgba(243,129,129,0.9) 100%),
+     url("../img/background/bg.jpg");
     background-repeat: no-repeat;
     background-size: cover;
+    padding-bottom: 230px;
+    
+   
 }
 
+  
+  
+
+  
+  
   
 .navigation {
     display: flex;
     align-items: center;
     justify-content: space-between;
+   margin-bottom: 190px;
     padding: 34px 0;
 }
+.logotype {
+    font-size: 30px;
+    font-family: "Montserrat";
+    color: rgb(255, 255, 255);
+    font-weight: bold;
+    
+    line-height: 1.2;
+    text-align: left;
+}
+
+  
 .navigation__list {
     display: flex;
 }
@@ -66,6 +86,10 @@ img {
   text-transform: uppercase;
   line-height: 16px; 
 }
+.navigation__list-item-icon:hover {
+    background-color:  rgb(252,227,138);
+}
+
 .navigation__list-item-icon_basket {
     width: 18px;
     height: 15px;
@@ -77,16 +101,166 @@ img {
   
   
 .navigation__list-item-link:hover {
-    color: #f38181;
+    color: rgb(252,227,138);
 }
+
+  
 .navigation__list-item-link:hover::after {
     position: absolute;
     display: block;
     width: 100%;
     height: 3px;
-    background-color: #f38181 ;
+    background-color: rgb(252,227,138) ;
     content: '';
     margin: 12px auto 0;
     transform: translateY(10px);
     
 }
+.header__description {
+    margin-bottom: 64px;
+    font-size: 72px;
+    text-align: center;
+    color: rgb(255, 255, 255);
+    font-family: 'Kaushan Script', cursive;
+    margin-bottom: 64px;
+}
+
+  
+.header__title {
+    font-family:  "Monserrat", sans-serif;
+    font-size: 150px;
+    font-weight: 700;
+    line-height: 0.933;
+    color: rgb(255, 255, 255);
+    text-transform: uppercase;
+    text-align: center;
+    margin-bottom: 124px;
+}
+.header__title-first {  
+    display: block;   
+}
+.header__title-second {
+    display: block;
+}
+.header__link {
+    display: flex;
+  justify-content: center;
+  align-items: center;
+    font-size: 14px;
+    font-family: "Montserrat";
+    color: rgb(255, 255, 255);
+    font-weight: bold;
+    text-transform: uppercase;
+    line-height: 1.2;
+    text-align: center;
+    border-style: solid;
+    border-width: 3px;
+    border-color: rgb(255, 255, 255);
+    background-color: rgba(0, 0, 0, 0);
+    width: 164px;
+   
+    margin: 0 auto;
+    padding: 12px 0;
+    min-height: 44px;
+}
+
+.heading-work {
+    margin: 0 auto;
+    /*padding-top: 126px;*/
+    padding-bottom: 67px;
+    text-align: center;  
+    padding-top: 54px;
+}
+
+.heading::after {
+    display: block;
+    width: 60px;
+    height: 3px;
+    background-color: rgb(243, 129, 129);;
+    content: '';
+    margin: 34px auto 0;
+}
+
+  
+
+.heading__first {
+    font-family: 'Kaushan Script', cursive;
+    font-size: 24px;
+    display: block;
+    color: #333333;
+    margin-bottom: 26px;
+}
+
+.heading__second {
+    display: block;
+    margin-top: 26px;
+    font-family: "Monserrat", sans-serif;
+    font-weight: 700;
+    font-size: 30px;
+    line-height: 36px;
+    color: #333333;
+    text-transform: uppercase;
+}
+.services-list {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+.services-list_item {
+  width: 381px;
+  padding-bottom: 105px;
+  padding-left: 82px;
+  background-repeat: no-repeat;
+   
+}
+.services-list_item:nth-child(n+4){
+    padding-bottom: 0;
+}
+.services-list_item_photo {
+    background-image: url("../img/servises/alarm.svg");
+   
+
+}
+
+.services-list_item_web {
+    background-image: url("../img/servises/line_graf.svg");   
+}
+
+.services-list_item_creat {
+    background-image: url("../img/servises/computer.svg");   
+}
+
+.services-list_item_seo {
+    background-image: url("../img/servises/book.svg");  
+}
+
+.services-list_item_css {
+    background-image: url("../img/servises/home.svg");   
+}
+
+.services-list_item_digital {
+    background-image: url("../img/servises/image.svg");  
+}
+
+.services-list_item_name {
+    font-family: "Monserrat", sans-serif;
+    font-weight: 400; 
+    font-size: 14px;
+    text-transform: uppercase;
+    color: #333333;
+    margin: 0 auto 10px;
+}
+
+.services-list_item_post {
+    font-family: "Roboto", "Arial", sans-serif;
+    font-weight: 400; 
+    font-size: 15px;
+    color: #999999;
+    line-height: 24px;
+    margin: 20px auto 0;
+    
+} 
+  
+
+  
